--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
 GOOGLE_ID="125175834521-kje2h07mcmpt8g49ctp25uhgprmuafj6.apps.googleusercontent.com"
 GOOGLE_SECRET="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"
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgresql://postgres:tQFcQUfRxs59qiTTmdck@containers-us-west-63.railway.app:6972/railway"
