--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.4.0",
     "next": "12.3.1",
-    "next-auth": "^4.12.2",
+    "next-auth": "^4.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -23,7 +25,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "prisma": "^4.4.0"
   },
   "lint-staged": {
     "*.{js, jsx, ts, tsx}": "eslint --cache --fix",
