🎨 Arreglar el formato

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,6 +4,5 @@
   "printWidth": 80,
   "tabWidth": 2,
   "singleQuote": true,
-  "arrowParens": "always",
-  "semi": true
+  "arrowParens": "always"
 }
