🗃️  add tables to database

--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ GOOGLE_SECRET="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"
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:tQFcQUfRxs59qiTTmdck@containers-us-west-63.railway.app:6972/railway"
+DATABASE_URL="postgresql://postgres:6grKt0OFwnkb1QJREGx9@containers-us-west-63.railway.app:6972/railway"
