--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.6.0",
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.10.2",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
     "react": "18.2.0",
@@ -27,7 +28,8 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "prisma": "^4.6.0"
+    "prisma": "^4.6.0",
+    "standard": "^17.0.0"
   },
   "lint-staged": {
     "*.{js, jsx, ts, tsx}": "eslint --cache --fix",
