--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ GOOGLE_SECRET="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"
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:6grKt0OFwnkb1QJREGx9@containers-us-west-63.railway.app:6972/railway"
+NEXTAUTH_URL="http://localhost:3000"
+NO_SECRET="/+XfKH3+nHELcSWhSGTt3fPNq5IWt427MqqYA/izPKg="
