--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
     "eslint": "^8.24.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
