--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "12.3.1",
     "next-auth": "^4.12.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-leaflet": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
