--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next-auth": "^4.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-leaflet": "^4.1.0"
+    "react-leaflet": "^4.1.0",
+    "react-rating-stars-component": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
