🐛 cierre de sesión corregido

--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ GOOGLE_SECRET="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"
 
 DATABASE_URL="postgresql://postgres:6grKt0OFwnkb1QJREGx9@containers-us-west-63.railway.app:6972/railway"
 NEXTAUTH_URL="http://localhost:3000"
-NO_SECRET="/+XfKH3+nHELcSWhSGTt3fPNq5IWt427MqqYA/izPKg="
+AUTH_SECRET="/+XfKH3+nHELcSWhSGTt3fPNq5IWt427MqqYA/izPKg="
