--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ GOOGLE_SECRET="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"
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:6grKt0OFwnkb1QJREGx9@containers-us-west-63.railway.app:6972/railway"
+DATABASE_URL="postgresql://postgres:Q8uesox4HRJJZI1r1ady@containers-us-west-63.railway.app:6972/railway"
 NEXTAUTH_URL="http://localhost:3000"
 AUTH_SECRET="/+XfKH3+nHELcSWhSGTt3fPNq5IWt427MqqYA/izPKg="
