--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@prisma/client": "^4.6.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.2",
+    "jquery": "^3.6.1",
+    "leaflet": "^1.9.3",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
     "react": "18.2.0",
